--- a/debian/control
+++ b/debian/control
@@ -7,8 +7,8 @@ Standards-Version: 3.8.4
 Homepage: http://zenninja.ru
 
 Package: reicast
-Architecture: all
-Depends: zenity, python
+Architecture: amd64
+Depends: zenity, python3
 Description: Dreamcast, in your pocket
  reicast is a sega dreamcast emulator for linux !
  
