--- a/debian/control
+++ b/debian/control
@@ -1,6 +1,6 @@
 Source: reicast
 Section: games
-Priority: extra
+Priority: optional
 Maintainer: Oleg Asonov <oleg.asonov@flant.ru>
 Build-Depends: debhelper (>= 5)
 Standards-Version: 3.8.4
